--- a/mainpage.html
+++ b/mainpage.html
@@ -7,4 +7,15 @@
 <title>Ella's Coding Fever</title>
 </head>
 
+<header>
+    <h1 id="headertext">Ella's Coding Fever</h1>
+    <h1 id="headertext">────────────────────────</h1>
+</header>
+<body>
+    <h2>This is a header!</h2>
+    <p class="text">testing!</p>
+</body>
+<img src="" alt="">
+<footer></footer>
+
 </html>
