--- a/mainpage.html
+++ b/mainpage.html
@@ -7,15 +7,20 @@
 <title>Ella's Coding Fever</title>
 </head>
 
-<header>
-    <h1 id="headertext">Ella's Coding Fever</h1>
+<header class="header">
+    <h1 class="inline" id="headertext">Ella's Coding Fever</h1>
+    <h3 id="darkbg">
+        <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/mainpage.html">Home</a>
+        <a class="inline" id="darkbg" href="#">Contact</a>
+        <a class="inline" id="darkbg" href="#">Filler</a>
+    </h3>
     <h1 id="headertext">────────────────────────</h1>
 </header>
 <body>
     <h2>This is a header!</h2>
+    <img id="raspberry" src="./assets/raspberries.jpg" width="300px" height="300px" alt="Raspberry picture!">
     <p class="text">testing!</p>
 </body>
-<img src="" alt="">
 <footer></footer>
 
 </html>
