--- a/mainpage.html
+++ b/mainpage.html
@@ -21,6 +21,9 @@
     <img id="raspberry" src="./assets/raspberries.jpg" width="300px" height="300px" alt="Raspberry picture!">
     <p class="text">testing!</p>
 </body>
-<footer></footer>
+
+<footer class="footer">
+    <h1 class="centered" id="headertext">────────────────────────</h1>
+</footer>
 
 </html>
