contact page consists of inputs, submit, and associated headers and footers

--- a/contactpage.html
+++ b/contactpage.html
@@ -3,12 +3,12 @@
 
 <head>
 <meta charset="UTF=8">
-<link rel="stylesheet" type="text/css" href="./assets/mainpage.css">
-<title>Ella's Coding Fever</title>
+<link rel="stylesheet" type="text/css" href="./assets/contactpage.css">
+<title>Contact Page</title>
 </head>
 
 <header class="header">
-    <h1 class="inline" id="headertext">Ella's Coding Fever</h1>
+    <h1 class="inline" id="headertext">Contact Page</h1>
     <h3 id="darkbg">
         <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/mainpage.html">Home</a>
         <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/contactpage.html">Contact</a>
@@ -17,9 +17,14 @@
     <h1 id="headertext">────────────────────────</h1>
 </header>
 <body>
-    <h2>This is a header!</h2>
-    <img id="raspberry" src="./assets/raspberries.jpg" width="300px" height="300px" alt="Raspberry picture!">
-    <p class="text">testing!</p>
+    <h2>Contact Submission</h2>
+    <p class="text">
+        <label for="FullName" class="block">Full Name: </label>
+        <input class="text, block" id="emailinput" type="text" placeholder="First Last"/>
+        <label for="Email" class="block">Email Address: </label>
+        <input class="text, block" id="emailinput" type="text" placeholder="example@gmail.com"/>
+        <button id="buttonemail" type="submit">Submit</button>
+    </p>
 </body>
 
 <footer class="footer">
