--- a/external site/contactpage.html
+++ b/external site/contactpage.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF=8">
-<link rel="stylesheet" type="text/css" href="./assets/contactpage.css">
+<link rel="stylesheet" type="text/css" href="../assets/contactpage.css">
 <title>Contact Page</title>
 </head>
 
