--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header class="header">
     <h1 class="inline" id="headertext">Ella's Coding Fever</h1>
     <h3 id="darkbg">
-        <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/mainpage.html">Home</a>
-        <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/external%20site/contactpage.html">Contact</a>
+        <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/index.html">Home</a>
+        <a class="inline" id="darkbg" href="file:///C:/Users/ruhd3/bootcamp/Ellas-coding-fever/externalsite/contactpage.html">Contact</a>
         <a class="inline" id="darkbg" href="#">Filler</a>
     </h3>
     <h1 id="headertext">────────────────────────</h1>
