--- a/externalsite/contactpage.html
+++ b/externalsite/contactpage.html
@@ -10,7 +10,7 @@
 <header class="header">
     <h1 class="inline" id="headertext">Contact Page</h1>
     <h3 id="darkbg">
-        <a class="inline" id="darkbg" href="./index.html">Home</a>
+        <a class="inline" id="darkbg" href="../index.html">Home</a>
         <a class="inline" id="darkbg" href="./externalsite/contactpage.html">Contact</a>
         <a class="inline" id="darkbg" href="#">Filler</a>
     </h3>
