--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 </header>
 <body>
     <h2>This is a header!</h2>
+<figure>
     <img id="raspberry" src="./assets/raspberries.jpg" width="300px" height="300px" alt="Raspberry picture!">
+    <figcaption id="capraspberry">These are raspberries!</figcaption>
+</figure> 
     <p class="text">testing!</p>
 </body>
 
