header reformatting implimenting new info

--- a/externalsite/contactpage.html
+++ b/externalsite/contactpage.html
@@ -12,17 +12,19 @@
     <h3 id="darkbg">
         <a class="inline" id="darkbg" href="../index.html">Home</a>
         <a class="inline" id="darkbg" href="./contactpage.html">Contact</a>
-        <a class="inline" id="darkbg" href="#">Filler</a>
+        <a class="inline" id="darkbg" href="#">Portfolio</a>
     </h3>
-    <h1 id="headertext">────────────────────────</h1>
+    <h1 id="headertext">─────────────────────</h1>
 </header>
 <body>
-    <h2>Contact Submission</h2>
+    <h2>Email Submission</h2>
     <p class="text">
         <label for="FullName" class="block">Full Name: </label>
         <input class="text, block" id="emailinput" type="text" placeholder="First Last"/>
         <label for="Email" class="block">Email Address: </label>
         <input class="text, block" id="emailinput" type="text" placeholder="example@gmail.com"/>
+        <label for="Content" class="block"></label>
+        <input class="text, block, emailbox" id="emailinput" type="text" placeholder="Type your message here."/>
         <button id="buttonemail" type="submit">Submit</button>
     </p>
 </body>
