--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h3 id="darkbg">
         <a class="inline" id="darkbg" href="./index.html">Home</a>
         <a class="inline" id="darkbg" href="./externalsite/contactpage.html">Contact</a>
-        <a class="inline" id="darkbg" href="#">Filler</a>
+        <a class="inline" id="darkbg" href="#">Portfolio</a>
     </h3>
-    <h1 id="headertext">────────────────────────</h1>
+    <h1 id="headertext">─────────────────────</h1>
 </header>
 <body>
     <h2>This is a header!</h2>
