ref pagegit add -A

--- a/externalsite/contactpage.html
+++ b/externalsite/contactpage.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF=8">
+<link rel="stylesheet" type="text/css" href="../assets/mainpage.css">
 <link rel="stylesheet" type="text/css" href="../assets/contactpage.css">
 <title>Contact Page</title>
 </head>
