added sidebar popup

--- a/externalsite/contactpage.html
+++ b/externalsite/contactpage.html
@@ -12,8 +12,8 @@
     <h1 class="inline" id="headertext">Contact Page</h1>
     <h3 id="darkbg">
         <a class="inline" id="darkbg" href="../index.html">Home</a>
-        <a class="inline" id="darkbg" href="./contactpage.html">Contact</a>
-        <a class="inline" id="darkbg" href="#">Portfolio</a>
+        <a class="inline" id="darkbg" href="./contactpage.html">Redirect</a>
+        <a class="inline" id="darkbg" href="./portfolio.html">Redirect</a>
     </h3>
     <h1 id="headertext">─────────────────────</h1>
 </header>
