added paragraph break box, works sectionwith grid, and contact

--- a/externalsite/portfolio.html
+++ b/externalsite/portfolio.html
@@ -26,8 +26,8 @@
 </section>
   
   <button class="openbtn" onclick="openNav()">&#9776;</button>
-  <h2>Collapsed Sidepanel</h2>
-  <p class="text">Content...</p>
+  <h2>testing page</h2>
+  <p class="text">wrfsfwsef</p>
 
 
 
