--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section>
      <h2>Contact</h2>
         <h2 class="headerunderline">─────────────────────</h2>
-        <section class="marginbottom text">
+        <section class="paddingbottom text">
            <ul>
                 <li>Email: ellathitotran@gmail.com</li>
                 <li>Phone: (512)-699-2564</li>
