added readme and alts

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
      <h2 class="headerunderline">─────────────────────</h2>
         <section id="works">
             <section class="grid">
-                <a class="item1section" href="./externalsite/contactpage.html"><section class="item1 item"><mark>Application </mark></section></a>
-               <a class="img2section" href="#"><section class="spangreen img2"><mark>Filler </mark></section></a>
-                <a class="img3section" href="#"><section class="img3"><mark>Filler </mark></section></a>
-                <a class="img4section" href="#"><section class="img4"><mark>Filler </mark></section></a>
+                <a class="item1section" href="./externalsite/contactpage.html" alt="raspberry image"><section class="item1 item"><mark>Application </mark></section></a>
+               <a class="img2section" href="#"><section class="spangreen img2" alt="raspberry image"><mark>Filler </mark></section></a>
+                <a class="img3section" href="#"><section class="img3" alt="raspberry image"><mark>Filler </mark></section></a>
+                <a class="img4section" href="#"><section class="img4" alt="raspberry image"><mark>Filler </mark></section></a>
             </section>
     <section>
      <h2 id="contact">Contact</h2>
