--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <h2 class="headerunderline">─────────────────────</h2>
         <section class="paddingbottom text">
            <ul>
-                <li>ellathitotran@gmail.com</li>
-                <li>Phone: (512)-699-2564</li>
+                <li>raspberry@gmail.com</li>
+                <li>Phone: (512) 833-7444</li>
                 <li><a href="https://twitter.com/ace1ln">Twitter</a></li>
                 <li><a href="https://github.com/aceiln/Ellas-coding-fever">GitHub</a></li>
            </ul>
